# pycasso2

./: .gitignore  .gitmodules  README.md  init.sh  pycasso.cfg.template  pyproject.toml  run_starlight.py  setup.py  test_resample.py
data/: Masks.telluric  diving3d.cfg
data/starlight/: PMSv03.NR2.OPT.config  grid.template.in
diving3d/: config.py  cube.py  error.py  flags.py  masterlist.py  plot.py  resampling.py  starlight.py  tables.py  wcs.py
example/: plot_dossier.py  plot_obs_error_spectra.py  plot_obs_spec.py  plot_surface_density.py  pycasso.cfg  reddening_example.py  test_cube.py  test_error_masked.py  test_lick.py  test_sfr.py
pipeline/: find_dimensions.py  resample.py  starlight1.py
pycasso2/: __init__.py  config.py  cosmology.py  cube.py  datasets.py  error.py  flags.py  geometry.py  legacy.py  lick.py  moddeling.py  modeling.py  photometry.py  reddening.py  resampling.py  resampling_opt.pyx  segmentation.py  wcs.py
scratch/: plot_dossier.py  run_starlight.py  test_cube.py  test_density.py  test_dimensions.py  test_error.py  test_error_masked.py  test_gap.py  test_headers.py  test_populations.py  test_resample.py  test_residual.py  test_sfr.py
scripts/: base2hdf5.py  dobby_example.ipynb  dobby_fit_califa.py  dobby_fit_manga.py  dobby_fit_muse.py  dobby_fit_muse_mpi.py  dobby_fit_muse_mpi_zones.py  dobby_hdf5_table.py  dobby_plots_examples.py  dobby_save_fits.py  pycasso_convert.py  pycasso_explorer.py  pycasso_explorer_dobby.py  pycasso_import.py  pycasso_segment.py  pycasso_starlight.py  pycasso_starlight_mpi.py  slurm_starlight_example.sh
(+42 files in other folders)
