[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pycasso2"
authors = [
    {name = "André Luiz de Amorim", email = "a.amorim@ufsc.br"},
]
description = "Stellar population and emission line analysis"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["astrophysics"]
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "astropy",
    "h5py",
    "numba",
]
dynamic = ["version"]


[tool.setuptools.packages.find]
where = ["pycasso2"]
